# data-structure-practice

./: .gitignore  CMakeLists.txt  README.md
01-线性表/顺序表/: 01_Sequential List.cpp  02_insert.cpp  03_delete.cpp  04_find.cpp
05-三元组类/: 花生采摘.cpp
06-二叉树/: 二叉树一维数组输出.cpp  二叉树中完全二叉树的判断.cpp  二叉树层序输入前序输出.cpp  二叉树层序遍历.cpp  二叉树析构函数release.cpp  二叉树的前序创建.cpp  二叉树的深度.cpp  二叉树节点删除.cpp
peactice/: delete the repeat.cpp  lianbiaofanzhuan.cpp  list.cpp  practice.cpp
